[package]
name = "api-p2p"
version = "0.1.0"
authors = ["Paul Montero <lpaulmp@gmail.com>"]
edition = "2021"

[dependencies]
rocket = "0.4.10"
diesel = { version = "1.4.8", features = ["postgres"]}
serde = "1.0.136"
serde_derive = "1.0"
serde_json = "1.0"

rocket_codegen	= "0.4.10"
r2d2-diesel = "1.0"
r2d2 = "0.8"
custom_derive ="0.1.7"
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]